@@ -1,4 +1,4 @@
-/* $Cambridge: exim/exim-src/src/smtp_out.c,v 1.1 2004/10/07 10:39:01 ph10 Exp $ */
+/* $Cambridge: exim/exim-src/src/smtp_out.c,v 1.2 2004/11/04 12:19:48 ph10 Exp $ */
 
 /*************************************************
 *     Exim - an Internet mail transport agent    *
@@ -223,7 +223,13 @@ else if (ip_connect(sock, host_af, host->address, port, timeout) < 0)
 
 if (save_errno != 0)
   {
-  HDEBUG(D_transport|D_acl|D_v) debug_printf("failed\n");
+  HDEBUG(D_transport|D_acl|D_v) 
+    {
+    debug_printf("failed: %s", CUstrerror(save_errno));
+    if (save_errno == ETIMEDOUT) 
+      debug_printf(" (timeout=%s)", readconf_printtime(timeout));
+    debug_printf("\n");   
+    } 
   close(sock);
   errno = save_errno;
   return -1;
